# GPU-Roofline-Profiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
configs/: sweep.yaml
docs/: DESIGN_DECISIONS.md  ENGINEERING_LOG.md  architecture.md  kernel_notes.md  methodology.md  profiling_guide.md
python/: cli.py  pyproject.toml
python/roofline/: __init__.py  loaders.py  model.py  ncu.py  plotting.py  tables.py
python/tests/: test_loaders.py  test_model.py  test_ncu.py  test_plotting_tables.py
report/: Makefile  main.tex  references.bib
report/sections/: appendix.tex  conclusion.tex  discussion.tex  experimental_setup.tex  introduction.tex  kernel_implementations.tex  methodology.tex  results.tex  roofline_background.tex
report/tables/: ceilings.tex  environment_full.tex  environment_summary.tex  ncu_counters.tex  ncu_full.tex  timing_full.tex  timing_summary.tex
report_debug/: Makefile  debug_report.tex
results/sample_run/: environment.txt  manifest.json  nvml.csv  peaks.csv  timing.csv
results/sample_run/ncu/: gemm_naive.csv  gemm_register_blocked.csv  gemm_tiled.csv  gemm_vectorized.csv  metrics_used.txt  ncu_version.txt  saxpy.csv  transpose_naive.csv  transpose_tiled.csv
scripts/: build_reports.ps1  check_no_dashes.py  dev_env.ps1  run_full_pipeline.ps1  run_ncu_profile.ps1  run_nsys_profile.ps1
src/: main.cpp
src/include/: config.hpp  cublas_check.hpp  cuda_check.hpp  device_peaks.hpp  kernels.hpp  nvml_monitor.hpp  nvtx_range.hpp  progress.hpp  timing.hpp
src/kernels/: gemm.cu  gemv.cu  reduction.cu  saxpy.cu  transpose.cu
src/profiling/: device_peaks.cu  nvml_monitor.cpp
tests/cpp/: CMakeLists.txt  test_gemm.cu  test_helpers.hpp  test_kernels.cu  test_peaks.cu
