[project]
name = "roofline"
version = "0.1.0"
description = "Analysis package for the GPU roofline profiler: math, loaders, plotting, tables."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["roofline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The ncu fixtures are verbatim Nsight Compute CSV output. Its header is 174
# characters wide and wrapping it would mean the test no longer exercises the
# real format, which is the entire point of the fixture.
"tests/test_ncu.py" = ["E501"]
